--- a/Blog/styles.css
+++ b/Blog/styles.css
@@ -11,16 +11,19 @@ header {
     align-items: center;
     background-color: #004080;
     color: #fff;
+    height: 8vh;
 }
 
-header p {
+.logo a {
     font-family: "Inter", sans-serif;
     font-size: 30px;
+    color: #ffffff;
     font-weight: bold;
     margin-left: 20px;
+    text-decoration: none;
 }
 
-header ul {
+.nav-links ul {
     display: flex;
     font-family: "Inter", sans-serif;
     list-style: none;
@@ -30,14 +33,14 @@ header ul {
     margin-right: 50px;
 }
 
-header ul li a {
+.nav-links ul li a {
     display: inline-block;
     color: #fff;
     text-decoration: none;
     transition: transform 0.3s ease, color 0.3s ease;
 }
 
-header ul li a:hover {
+.nav-links ul li a:hover {
     color: #66b3ff;
     text-decoration: underline;
     transform: scale(1.1);
@@ -80,6 +83,7 @@ header ul li a:hover {
     justify-content: center;
     align-items: center;
     width: 90vw;
+    min-height: 50vh;
     text-align: center;
     background-color: #cceeff;
     margin: 40px auto;
@@ -385,6 +389,7 @@ header ul li a:hover {
     justify-content: center;
     align-items: center;
     width: 80vw;
+    min-height: 50vh;
     padding: 20px;
     text-align: center;
     background-color: #cceeff;
