links blog arreglados

--- a/Blog/styles.css
+++ b/Blog/styles.css
@@ -3,7 +3,7 @@ body {
     padding: 0;
     color: #fff2f2;
     cursor: none;
-    background-image: url('/Linktree/Blog/imagenes/fondorock.avif');
+    background-image: url('../Blog/imagenes/fondorock.avif');
     
 }
 
